Custom Controls using Content Views, Bindable Properties, ControlTemplate & Template Bindings, Custom Events

--- a/MauiCalculatorApp/MauiCalculatorApp.csproj
+++ b/MauiCalculatorApp/MauiCalculatorApp.csproj
@@ -54,6 +54,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\BmiButtonControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Controls\GenderControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
